--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Catalog\Catalog.csproj" />
+  </ItemGroup>
+
 </Project>
