--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -14,11 +14,11 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.1.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Basket\Basket.csproj" />
-    <ProjectReference Include="..\Basket\Basket.fsproj" />
     <ProjectReference Include="..\Catalog\Catalog.csproj" />
   </ItemGroup>
 
