--- a/Basket/Basket.csproj
+++ b/Basket/Basket.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.1.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<!-- Reference the Product.cs file from the Catalog project -->
+		<Compile Include="..\Catalog\Models\Product.cs" Link="Models\Product.cs" />
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
