"Blazor Webapi as WebApp is created into the frontend folder. WebApp registered to the AppHost program.cs for orchestration"

--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Basket\Basket.csproj" />
     <ProjectReference Include="..\Catalog\Catalog.csproj" />
+    <ProjectReference Include="..\WebApp\WebApp.csproj" />
   </ItemGroup>
 
 </Project>
